Building the RecordReader in order to read input files

--- a/Distributed_Systems-Project/.classpath
+++ b/Distributed_Systems-Project/.classpath
@@ -32,5 +32,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Amir/Dropbox/מודולו/תכנות מערכות מבוזרות/Assignment3/jars/hadoop-common-2.2.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Amir/Dropbox/מודולו/תכנות מערכות מבוזרות/Assignment3/jars/hadoop-mapreduce-client-core-2.2.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
