--- a/Distributed_Systems-Project/pom.xml
+++ b/Distributed_Systems-Project/pom.xml
@@ -7,7 +7,7 @@
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk</artifactId>
-      <version>1.11.169</version>
+      <version>1.11.172</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -16,5 +16,11 @@
       <version>1.2.1</version>
       <scope>compile</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/nz.ac.waikato.cms.weka/weka-dev -->
+	<dependency>
+	    <groupId>nz.ac.waikato.cms.weka</groupId>
+	    <artifactId>weka-dev</artifactId>
+	    <version>3.7.5</version>
+	</dependency>
   </dependencies>
 </project>
